version/stable/_sources/api/ansys/mechanical/stubs/v251/Ansys/ACT/Mechanical/Application/SolveProcessSettings/IQueueSettings.rst.txt
.. vale off



:class:`IQueueSettings`
=======================

.. py:class:: ansys.mechanical.stubs.v251.Ansys.ACT.Mechanical.Application.SolveProcessSettings.IQueueSettings

   Bases: :py:obj:`object`



.. py:currentmodule:: IQueueSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CopyTo`
            - CopyTo method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CloudAccounts`
            - Gets the list of Cloud Accounts.
          * - :py:attr:`~DCSPassword`
            - DCSPassword property.
          * - :py:attr:`~DCSUrl`
            - DCSUrl property.
          * - :py:attr:`~DCSUsername`
            - DCSUsername property.
          * - :py:attr:`~JobName`
            - Gets or sets the Job Name field for the queue settings.
          * - :py:attr:`~License`
            - Gets or sets the License field for the queue settings.
          * - :py:attr:`~Name`
            - Gets or sets the name of the current queue for the configuration.
          * - :py:attr:`~SelectedCloudAccount`
            - Gets or sets the Cloud Account.
          * - :py:attr:`~SolutionExecutionTarget`
            - SolutionExecutionTarget property.







Property detail
---------------
.. py:property:: CloudAccounts
   :type: Optional[List[str]]


   
   Gets the list of Cloud Accounts.
















   ..
       !! processed by numpydoc !!

.. py:property:: DCSPassword
   :type: Optional[str]


   
   DCSPassword property.
















   ..
       !! processed by numpydoc !!

.. py:property:: DCSUrl
   :type: Optional[str]


   
   DCSUrl property.
















   ..
       !! processed by numpydoc !!

.. py:property:: DCSUsername
   :type: Optional[str]


   
   DCSUsername property.
















   ..
       !! processed by numpydoc !!

.. py:property:: JobName
   :type: Optional[str]


   
   Gets or sets the Job Name field for the queue settings.
















   ..
       !! processed by numpydoc !!

.. py:property:: License
   :type: Optional[str]


   
   Gets or sets the License field for the queue settings.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets or sets the name of the current queue for the configuration.
















   ..
       !! processed by numpydoc !!

.. py:property:: SelectedCloudAccount
   :type: Optional[str]


   
   Gets or sets the Cloud Account.
















   ..
       !! processed by numpydoc !!

.. py:property:: SolutionExecutionTarget
   :type: Optional[str]


   
   SolutionExecutionTarget property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: CopyTo(other: Ansys.ACT.Mechanical.Application.SolveProcessSettings.IQueueSettings) -> None

   
   CopyTo method.

   ..
       !! processed by numpydoc !!



.. vale on